@@ -290,7 +290,7 @@ PORT pdk13_port =
     0,                          /* banked func ptr */
     1,                          /* bit */
     4,                          /* float */
-    64,                         /* bit-precise integer types up to _BitInt (64) */
+    16,                         /* bit-precise integer types up to _BitInt (64) */
   },
   /* tags for generic pointers */
   { 0x00, 0x40, 0x60, 0x80 },   /* far, near, xstack, code */
@@ -458,7 +458,7 @@ PORT pdk14_port =
     0,                          /* banked func ptr */
     1,                          /* bit */
     4,                          /* float */
-    64,                         /* bit-precise integer types up to _BitInt (64) */
+    16,                         /* bit-precise integer types up to _BitInt (64) */
   },
   /* tags for generic pointers */
   { 0x00, 0x40, 0x60, 0x80 },   /* far, near, xstack, code */
@@ -626,7 +626,7 @@ PORT pdk15_port =
     0,                          /* banked func ptr */
     1,                          /* bit */
     4,                          /* float */
-    64,                         /* bit-precise integer types up to _BitInt (64) */
+    16,                         /* bit-precise integer types up to _BitInt (64) */
   },
   /* tags for generic pointers */
   { 0x00, 0x40, 0x60, 0x80 },   /* far, near, xstack, code */
